@@ -9,6 +9,7 @@ TODO :
 	added mod_tora (neko application server)
 	changed mod_neko get_host_name : return the http host instead of the server IP
 	bugfix in nekoml : fixed usage of nekoml.std + added -nostd
+	std : added EINTR handling in send/recv socket operations
 
 2008-07-28 : 1.7.1
 	nekotools : fixed set_return_code in web server
